--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 /* Global Styles */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
+  background-image: url("images/clouds.JPG");
+  background-size: cover;
+  background-position: center;
+  
+  background-repeat: no-repeat;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -10,13 +20,13 @@ body {
 
 
 /* Main Content */
-.container {
+/*.container {
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+}*/
 
 .section {
   margin-bottom: 20px;
@@ -110,29 +120,31 @@ body {
 }
 
 .main h1 {
-  padding: 25% 0 0 0;
+  padding: 10% 0 0 0;
+  text-align: center;
   font-size: 7em;
-
+  color: white;
   
 }
 
 .main h6 {
   font-size: 2em;
+  text-align: center;
   margin: 0 5% 5%;
-  color: #666;
+  color: whitesmoke;
 }
 
 .header-icons {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
 }
 
 .header-icons a {
   color: black;
-  font-size: 2rem;
-  margin: 10px 10px;
+  font-size: 3em;
+  margin: 1em 1em;
   text-decoration: none;
 }
 
