--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body {
   background-image: url("images/clouds.JPG");
   background-size: cover;
   background-position: center;
-  
   background-repeat: no-repeat;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -16,18 +15,7 @@ body {
   background-color: #f7f7f7;
 }
 
-
-
-
 /* Main Content */
-/*.container {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}*/
-
 .section {
   margin-bottom: 20px;
 }
@@ -124,7 +112,6 @@ body {
   text-align: center;
   font-size: 7em;
   color: white;
-  
 }
 
 .main h6 {
@@ -151,16 +138,16 @@ body {
 .header-icons a:hover {
   color: gray;
 }
+
+/* Footer */
 footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
   position: fixed;
   bottom: 0;
-  left: 0;
   width: 100%;
-  color: #fff;
-  background-color: #333;
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
 }
 
 footer a {
@@ -175,24 +162,40 @@ footer a:hover {
   color: #888;
 }
 
-
 /* Responsive Styles */
-@media (max-width: 600px) {
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
+@media only screen and (max-width: 600px) {
+  /* Adjust the layout for small screens */
+
+  body {
+    background-image: none; /* Remove background image on small screens */
   }
 
-  .navbar-menu {
-    margin-top: 10px;
+  .main h1 {
+    padding: 10% 0 0 0;
+    font-size: 4em; /* Decrease font size for smaller screens */
   }
 
-  .navbar-menu li {
-    margin: 0;
-    margin-top: 10px;
+  .main h6 {
+    font-size: 1.5em; /* Decrease font size for smaller screens */
   }
 
-  .navbar-menu li a {
-    padding: 10px;
+  .header-icons {
+    flex-wrap: wrap; /* Allow icons to wrap on small screens */
+  }
+
+  .header-icons a {
+    margin: 0.5em 0.5em; /* Adjust icon margins for smaller screens */
+  }
+
+  #main-nav {
+    flex-wrap: wrap; /* Allow navigation items to wrap on small screens */
+  }
+
+  .nav-button {
+    margin: 0.5em 0.5em; /* Adjust button margins for smaller screens */
+  }
+
+  .footer {
+    padding: 10px 0; /* Adjust footer padding for smaller screens */
   }
 }
