--- a/src/App.css
+++ b/src/App.css
@@ -143,8 +143,8 @@ body {
 
 .header-icons a {
   color: black;
-  font-size: 3em;
-  margin: 1em 1em;
+  font-size: 5em;
+  margin: 0 1em;
   text-decoration: none;
 }
 
@@ -167,7 +167,7 @@ footer a {
   color: #fff;
   text-decoration: none;
   font-size: 36px;
-  margin: 0 20px;
+  margin-bottom: 10%;
   transition: color 0.3s ease;
 }
 
@@ -180,7 +180,6 @@ footer a:hover {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: 20px;
 }
 
 .container h1 {
@@ -192,56 +191,62 @@ footer a:hover {
 }
 
 .last-name {
-  display: cen;
+  display: block;
   
   margin-top: .1em; /* Adjust as needed for spacing between the names */
+  margin-bottom: 25%;
 }
 
 
 img {
-  max-width: 30%;
+  max-width: 30em;
+  min-width: 10em;
   height: auto;
   margin: 5%;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 
 /* Responsive Styles */
-@media only screen and (max-width: 600px) {
-  /* Adjust the layout for small screens */
+@media (max-width: 1100px) {
+  #main-nav {
+    flex-wrap: wrap;
+    
+  }
 
-  body {
-    background-color: rgb(170, 170, 245);
-    background-image: none; /* Remove background image on small screens */
+  
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    
   }
 
   .main h1 {
-    padding: 10% 0 0 0;
-    font-size: 4em; /* Decrease font size for smaller screens */
+    font-size: 3em;
+    margin-bottom: 0.5em;
   }
 
   .main h6 {
-    font-size: 1.5em; /* Decrease font size for smaller screens */
+    font-size: 1.5em;
+    margin-bottom: 1em;
   }
-
+}
+  
+  .last-name {
+    margin-bottom: 0%;
+  }
   .header-icons {
-    padding: 0 0 1em 0;
-    flex-wrap: wrap; /* Allow icons to wrap on small screens */
+    margin-top: 3%;
+    margin-bottom: 5%;
   }
 
   .header-icons a {
-    margin: 0.5em 0.5em; /* Adjust icon margins for smaller screens */
+    font-size: 4em;
+  }
+  img {
+    max-width: 20em;
   }
 
-  #main-nav {
-    flex-wrap: wrap; /* Allow navigation items to wrap on small screens */
-  }
-
-  .nav-button {
-    margin: 0.5em 0.5em; /* Adjust button margins for smaller screens */
-  }
-
-  .footer {
-    padding: 10px 0; /* Adjust footer padding for smaller screens */
-  }
-}
