--- a/src/App.css
+++ b/src/App.css
@@ -194,16 +194,16 @@ footer a:hover {
   display: block;
   
   margin-top: .1em; /* Adjust as needed for spacing between the names */
-  margin-bottom: 25%;
+  padding-bottom: 10%;
 }
 
 
 img {
-  max-width: 30em;
-  min-width: 10em;
+  width: 30em;
+ 
   height: auto;
   margin: 5%;
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 
@@ -225,17 +225,15 @@ img {
   }
 
   .main h1 {
-    font-size: 3em;
-    margin-bottom: 0.5em;
+    font-size: 5em;
+    margin-bottom: 0em;
   }
 
   .main h6 {
     font-size: 1.5em;
     margin-bottom: 1em;
   }
-}
-  
-  .last-name {
+    .last-name {
     margin-bottom: 0%;
   }
   .header-icons {
@@ -247,6 +245,11 @@ img {
     font-size: 4em;
   }
   img {
-    max-width: 20em;
+    margin-top: 0;
+    width: 30%;
+    min-width: 250px;
   }
+
+}
+  
 
