--- a/src/App.css
+++ b/src/App.css
@@ -244,6 +244,8 @@ img {
     margin-bottom: 3em;
     margin-left: 0;
     margin-right: 0;
+    padding-right: 0;
+    padding-left: 0;
     
   }
 
